[package]
name = "rust-axum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.74"
axum = "0.6.20"
lazy-regex = "3.1.0"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.34.0", features = ["full"] }
tower-cookies = "0.9.0"
tower-http = { version = "0.4.4", features = ["fs"] }

[dev-dependencies]
anyhow = "1.0.75"
httpc-test = "0.1.8"
